recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: value gauche is not a member of Double
possible cause: maybe a semicolon is missing before `value gauche'?
	gauche(120))	
        ^